--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,15 +1,9 @@
-<<<<<<< HEAD
-#Fri Dec 14 09:10:28 CET 2018
-=======
-#
-# Copyright (c) 2018.
-# Created by Josua Lengwenath
-#
-
-#Mon Dec 17 21:52:23 CET 2018
->>>>>>> 0c642e59b697c5269493e38794ce12205d6cdeb3
+#Sat Apr 25 14:59:05 CEST 2020
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
+>>>>>>>=0c642e59b697c5269493e38794ce12205d6cdeb3
 zipStoreBase=GRADLE_USER_HOME
 zipStorePath=wrapper/dists
-distributionUrl=https\://services.gradle.org/distributions/gradle-5.1-milestone-1-all.zip
+distributionUrl=https\://services.gradle.org/distributions/gradle-5.6.4-all.zip
+=\=\=\=\=\=\=
+<<<<<<<=HEAD
